--- a/public/styles/faq.css
+++ b/public/styles/faq.css
@@ -1,105 +1,16 @@
-/* General layouts */
-
-html,
-body {
-  margin: 0;
-  padding: 0; 
-  font-family:Linotte;
-  font-weight:400;
-  color: #050422;
-}
-
-.about {
-  margin: 0 auto;
-  max-width: 40em;
-}
-p {
-  text-align: left;
-  margin-bottom: 10px;
-
-}
-
-blockquote {
-  font-style: italic;
-}
-
-body#home{
-  background-color: #050422;
-  overflow-x:hidden;
-}
-
-@media (min-width: 42rem) {
-  .layout-flex p {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
-
-  .layout-flex--half {
-    flex-basis: 0;
-    flex-grow: 6;
-  }
-
-  .layout-flex--third {
-    flex-grow: 4;
-  }
-
-}
+/**
+ * /* General layouts
+ *
+ * @format
+ */
 
 /* Header */
-
-#home header:not(.revealed) {
-  background:none;
-  position:relative;
-}
-
-#home header:not(.revealed) .page-link a {
-  color:white;
-}
-
-
-#home header:not(.revealed) .logo {
-  visibility:hidden;
-}
 
 .github-corner-logo {
   z-index: 1000;
 }
 
-.highlighted {
-  position: relative;
-}
-
-.highlighted:before {
-  content: " ";
-  background-color: #51E8E4; /* dark blue*
-/*   background-color: #C8EF00; */
-/*   background-color: #BCFFFD; light blue
-   */
-  height: 70%;
-  width: calc(100% + 25px);
-  left: -12px;
-  bottom: -2px;
-  position: absolute;
-  z-index: -1;
-  border-radius: 20px;
-}
-
 /* Sections */
-
-section {
-  padding: 5rem;
-}
-
-.section--content {
-  margin: auto;
-  max-width: 49rem;
-}
-
-section:nth-of-type(even) {
-  background: #ccc;
-}
 
 p a {
   color: #000;
@@ -114,7 +25,7 @@ p a:hover:before {
 
 p a:before {
   position: absolute;
-  background-color: #BCFFFD;
+  background-color: #bcfffd;
   width: 100%;
   height: 4px;
   bottom: -3px;
@@ -144,7 +55,7 @@ li a:hover:before {
 
 li a:before {
   position: absolute;
-  background-color: #BCFFFD;;
+  background-color: #bcfffd;
   width: 100%;
   height: 4px;
   bottom: -3px;
@@ -156,373 +67,6 @@ li a:before {
   transition-delay: 0s;
   border-radius: 4px;
 }
-
-h2 {
-  margin: 0 0 1rem;
-  text-align: left;
-  /*font-family: "Multicolore", sans-serif;*/
-}
-
-/*Section: Hero */
-
-section#hero{
-  position:relative;
-  min-height:540px;
-}
-
-#hero .bg{
-  position:absolute;
-  bottom:-20px;
-  left:-50%;
-  height:800px;
-  width:200%;
-  background: rgb(5,4,34);
-  background: -moz-linear-gradient(176deg, rgba(5,4,34,1) 0%, rgba(8,5,113,1) 100%);
-  background: -webkit-linear-gradient(176deg, rgba(5,4,34,1) 0%, rgba(8,5,113,1) 100%);
-  background: linear-gradient(176deg, rgba(5,4,34,1) 0%, rgba(8,5,113,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#050422",endColorstr="#080571",GradientType=1);
-  transform: rotate(-3deg);
-  z-index:-1;
-}
-
-#hero .bg-images{
-  width: 100%;
-  max-width: 49rem;
-  height: 100%;
-  margin: auto;
-  right: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-#hero .bg-images--overflow {
-  height: 100%;
-  position: relative;
-  width: 100%;
-}
-
-#hero .hero-bg-img{
-  position:absolute;
-  bottom:0px;
-  left:0px;
-}
-
-#hero .hero-bg-img.star1 {
-  bottom:80px;
-  left:-100px;
-}
-
-#hero .hero-bg-img.star2 {
-  bottom: 421px;
-  left: -210px;
-}
-
-#hero .hero-bg-img.star3 {
-  bottom:130px;
-  left:320px;
-}
-
-#hero .hero-bg-img.star4 {
-  bottom:480px;
-  left:-20px;
-}
-
-#hero .hero-bg-img.star5 {
-  bottom:100px;
-  left:820px;
-}
-
-#hero .hero-bg-img.mic {
-  bottom: 212px;
-  left: 195px;
-}
-
-#hero .section--content{
-  position:relative;
-  z-index:0;
-}
-
-#hero .layout-flex{
-  align-items: flex-start;
-}
-
-#hero #hero-logo{
-  width:130%;
-  left:-22px;
-  position:relative;
-}
-
-#hero #hero-tagline{
-  font-size:1.2em;
-  color:white;
-  font-weight:400;
-}
-
-/* Section: Form */
-
-#hero h2{
-  color:white;
-}
-
-#hero #now{
-  padding-left:140px;
-  text-align:center;
-}
-
-#now h2{
-  font-size:1.6rem;
-  font-weight:500;
-}
-
-#hero a{
-  color:white;
-  font-weight:400;
-  
-}
-
-form {
-  color:white;
-  border-radius: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-form label,
-form input {
-  margin-bottom: 1rem;
-  padding: 0 1rem;
-  width: 100%;
-  border-radius:8px;
-  height:48px;
-  font-weight:400;
-  font-size:18px;
-  font-family: "Linotte";
-}
-
-form input[type=text]{
-  border: 2px solid #050422;
-}
-
-
-/* Section: Options */
-
-section#options {
-  position:relative;
-  background:none;
-  color:white;
-  text-align:center;
-
-}
-.diagonal-bg{
-  background-color: #FE3466;
-  width: 200%;
-  position: absolute;
-  top: 6px;
-  left: -50%;
-  height:100%;
-  z-index:0;
-  transform: rotate(-3deg);
-
-}
-
-section#options .section--content *{
-  z-index:1;
-  position:relative;
-}
-
-.options--visual {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.options--visual img{
-  padding:20px;
-  width:75%;
-}
-
-.options--or {
-  text-align: center;
-  font-weight:700;
-  font-size:32px;
-  padding:16px;
-  color: #B61F44;
-}
-
-.options--description {
-  font-weight:500;
-  padding:16px;
-  text-align:center;
-  font-size:18px;
-}
-
-/* Section: How it works */
-
-section#how-it-works{
-  color:white;
-}
-
-.how-it-works--list {
-  list-style-type: none;
-  padding-left: 0;
-  margin: auto;
-  max-width: 40rem;
-}
-
-.how-it-works--visual {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-}
-
-.how-it-works--visual img{
-  width:200px;
-  padding:20px;
-}
-
-.how-it-works--description {
-  margin: 2rem auto;
-  max-width: 15rem;
-  text-align: center;
-  line-height:1.6rem;
-}
-
-.how-it-works--label {
-  display: block;
-  font-size: 1.5rem;
-  font-weight: 500;
-  margin-bottom: 1rem;
-  text-transform:uppercase;
-}
-
-.text-magenta{
-  color: #C202FB;
-}
-
-.text-yellow{
-  color: #C8EF00;
-}
-
-.text-pink{
-  color:#FE3466;
-}
-
-/* Section: Recap */
-
-section#recap {
-  position:relative;
-  background:none;
-}
-
-section#recap .bg{
-  background: #D6FFA6 !important;
-  width: calc(100% - 60px);
-  max-width:60rem;
-  margin:auto;
-  position: absolute;
-  left:0px;
-  right:0px;
-  top: 0px;
-  height: 100%;
-  z-index: 0;
-  border-radius: 20px;
-  transform: skew(0deg,1.4deg);
-}
-
-.recap--contents {
-  text-align: center;
-  z-index:1;
-  position:relative;
-}
-
-.recap--description {
-  font-size: 2rem;
-  margin: auto;
-  max-width: 30rem;
-  font-weight: 500;
-  margin-bottom:16px;
-}
-
-.recap--link {
-  display: inline-block;
-  margin-top: 1rem;
-}
-
-.input-radio {
-  width: 10px;
-}
-
-/* Special Footer style */
-
-footer {
-  background: black;
-  color: white;
-  padding: 2rem;
-  
-}
-
-#footer--content {
-  width: calc(100% - 60px);
-  max-width: 70rem;
-  margin: auto; 
-}
-
-/* Homepage responsive tweaks */
-
-@media (max-width: 60rem) {
-  #hero #now{
-    padding-left:120px;
-    text-align:center;
-  }
-}
-
-@media (max-width: 50rem) {
-  #hero #now{
-    padding-left:60px;
-    text-align:center;
-  }
-}
-
-@media (max-width: 42rem) {
-  #hero #now{
-    padding-left:0px;
-    text-align:center;
-    padding-top:20px;
-  }
-  #hero {
-    text-align:center;
-  }
-  #hero #hero-logo{
-    width:100%;
-    left:-24px;
-    position:relative;
-  }
-  .options--visual img{
-    /*padding:20px;*/
-    width:50%;
-  }
-
-}
-
-#members {
-  display: inline-flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.member {
-  text-align: center;
-  margin: 10px 10px;
-}
-.memberlabel {
-  /* --- */
-}
-
-.member img {
-  width: 150px;
-  border-radius: 50%;
-  border: 3px solid black;
-}
-
 
 /* Collapsible  */
 
@@ -536,9 +80,9 @@ footer {
   text-align: left;
   outline: none;
   font-size: 18px;
-  font-family: "Linotte";
-  font-weight:500;
-  border-radius:10px;
+  font-family: var(--font-brand);
+  font-weight: 500;
+  border-radius: 10px;
 }
 
 .collapsible:hover {
@@ -546,7 +90,8 @@ footer {
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .collapsible:hover {
+.active,
+.collapsible:hover {
   background-color: #ccc;
 }
 
@@ -559,13 +104,13 @@ footer {
 }
 
 button.collapsible:after {
-    content: '\002B';
-    color: white;
-    font-weight: bold;
-    float: right;
-    margin-left: 5px;
+  content: "\002B";
+  color: var(--color-linen);
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
 }
 
 button.collapsible.active:after {
-    content: "\2212";
+  content: "\2212";
 }
