--- a/public/styles/scene.css
+++ b/public/styles/scene.css
@@ -1,42 +1,42 @@
-* {
-  box-sizing: border-box;
-}
+/** @format */
 
 #usersList {
-  font-family: "Linotte";
+  font-family: var(--font-brand);
   font-size: 22px;
 }
 
 ul li {
-    display: block;
-/*     height: 100px; */
-    line-height: 70px;
+  display: block;
+  /*     height: 100px; */
+  line-height: 70px;
 }
 
 ul li img {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 #list2 {
-/*   display:none; */
+  /*   display:none; */
 }
 
 #list3 {
-/*   display:none; */
+  /*   display:none; */
 }
 
-span#host, span#user2, span#user3 {
+span#host,
+span#user2,
+span#user3 {
   padding-left: 15px;
 }
 
 #instructions {
-  font-family: "Linotte";
+  font-family: var(--font-brand);
   position: fixed;
   background: rgba(30, 30, 30, 0.8);
   padding: 12px;
-  color: #FAFAFA;
+  color: #fafafa;
   bottom: 15px;
-/*   right: 120px; */
+  /*   right: 120px; */
   z-index: 2;
   border-radius: 10px;
   left: 0;
@@ -47,15 +47,14 @@ span#host, span#user2, span#user3 {
 }
 
 p {
-  font-family: "Linotte";
-  color: #050422;
-
+  font-family: var(--font-brand);
+  color: var(--color-midnight);
   text-align: center;
 }
 
 h2 {
-  font-family: "Linotte";
-  color: #050422;
+  font-family: var(--font-brand);
+  color: var(--color-midnight);
   text-align: center;
   font-weight: 400;
   max-width: 75rem;
@@ -76,10 +75,10 @@ button {
   height: 50px;
   line-height: 47px;
   font-weight: 700;
-  border: 3px solid #050422;
-  font-family: "Linotte";
-  background-color: white;
-  color: #050422;
+  border: 3px solid var(--color-midnight);
+  font-family: var(--font-brand);
+  background-color: var(--color-linen);
+  color: var(--color-midnight);
   text-decoration: none;
   border-radius: 8px;
   transition: 0.2s background-color;
@@ -87,15 +86,15 @@ button {
 
 .button:hover {
   cursor: pointer;
-  background-color: #DAD8DE;
+  background-color: #dad8de;
 }
 
 .button-bold {
-  background-color: #C8EF00;
+  background-color: var(--color-old-yellow);
 }
 
 .button-bold:hover {
-  background-color: #EFFF9E;
+  background-color: #efff9e;
 }
 
 videoControls {
@@ -113,7 +112,7 @@ kbd {
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
   color: #333;
   display: inline-block;
-  font-family: "Linotte";
+  font-family: var(--font-brand);
   font-size: 14px;
   line-height: 1.4;
   margin: 0 0.1em;
@@ -130,11 +129,10 @@ kbd {
   text-transform: uppercase;
   color: #ffffff;
   font-weight: 700;
-  font-family: "Linotte";
+  font-family: var(--font-brand);
 }
 
 #smiley {
-
 }
 
 #smiley1 {
@@ -164,7 +162,6 @@ kbd {
   z-index: 2;
   position: absolute;
   visibility: hidden;
-
 }
 
 #feedback {
@@ -179,7 +176,6 @@ kbd {
   background-image: url("https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ffeedback.svg?v=1596918776029");
   background-position: 50%, 50%;
   background-repeat: no-repeat;
-
 }
 
 #invite {
@@ -198,11 +194,11 @@ kbd {
   width: 83%;
   margin-top: 25px;
 
-/*   top: 20px;
+  /*   top: 20px;
   right: 200px;
   z-index: 2;
   position: absolute; */
-/*   background: #ffffff; */
+  /*   background: #ffffff; */
   font-weight: 700;
 }
 
@@ -220,7 +216,7 @@ kbd {
   left: 50px;
   z-index: 2;
   position: absolute;
-  font-family: "Linotte", sans-serif;
+  font-family: var(--font-brand);
   font-size: 1.6em;
   font-weight: bold;
   line-height: 1.4em;
@@ -259,7 +255,7 @@ kbd {
   text-decoration:none !important;
   font-weight:600;
   font-size:1.2rem;
-  color: #050422;
+  color: var(--color-midnight);
 }
 
 .logo {
@@ -275,8 +271,8 @@ header .page-link.about{
 }
 
 .tag-tilt {
-  background: #FE3466;
-  color: white;
+  background: var(--color-pretty-in-pink);
+  color: var(--color-linen);
   font-size: 1rem;
   padding: .01rem 0.4rem;
   position: absolute;
@@ -292,8 +288,8 @@ header .page-link.about{
 /* #done {
   border-radius: 4px;
   /* background: rgba(0,0,0,.35); */
-  /* background: #FF0066; */
-  /* background: rgb(255, 0, 102, .60); */
+/* background: #FF0066; */
+/* background: rgb(255, 0, 102, .60); */
 /*   background: #ff91a4;
   color: #ffffff;
   display: inline-block;
@@ -305,8 +301,7 @@ header .page-link.about{
   text-decoration: none;
   margin-top: 15px;
   margin-bottom: 10px;
-} */ */
- */
+} */
 #inviteModal {
   font-family: "Lato", "Helvetica Neue", arial, sans-serif;
   /*   font-weight: 700; */
@@ -359,7 +354,7 @@ header .page-link.about{
   border: 0px;
   border-radius: 8px 0px 0px 8px;
   font-size: 19px;
-  font-family: "Linotte";
+  font-family: var(--font-brand);
   text-align: left;
   margin: 0px;
   margin-right: -3px;
@@ -375,7 +370,7 @@ header .page-link.about{
   display: inline-block;
   border: 0px;
   border-radius: 0px 5px 5px 0px;
-  border-left: 3px solid #050422;
+  border-left: 3px solid var(--color-midnight);
   outline: 0;
 }
 
@@ -387,16 +382,15 @@ header .page-link.about{
 } */
 
 .shareButton {
-  
-margin: auto;
-display: flex;
-justify-content: center;
-flex-direction: row;
-max-width: 400px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  max-width: 400px;
 }
 
 .fb-share-button {
-/*   font-size: 15px;
+  /*   font-size: 15px;
   margin-top: 15px;
   margin-right: 5px;
   display: inline-block;
@@ -404,7 +398,7 @@ max-width: 400px;
   vertical-align: top;
   float: left; */
   margin-left: 11px;
-} 
+}
 
 /* Songs modal */
 
@@ -417,9 +411,9 @@ max-width: 400px;
 }
 
 #songModal.modal a.close-modal {
-    filter: invert(1);
-    top: 5px;
-    right: 5px;
+  filter: invert(1);
+  top: 5px;
+  right: 5px;
 }
 
 .jukeboxes {
@@ -434,38 +428,38 @@ max-width: 400px;
 }
 
 #added-notice {
-    display: none;
+  display: none;
 }
 
 #added-notice[populated] {
-    align-items: center;
-    display: flex;
-    font-size: 1.125rem;
-    height: 100%;
-    justify-content: center;
-    left: 15%;
-    padding: 1rem;
-    position: absolute;
-    top: 0;
-    width: 70%;
+  align-items: center;
+  display: flex;
+  font-size: 1.125rem;
+  height: 100%;
+  justify-content: center;
+  left: 15%;
+  padding: 1rem;
+  position: absolute;
+  top: 0;
+  width: 70%;
 }
 
-@media (min-width: 49rem) {
+@media (min-width: var(--breakpoint-lg)) {
   #added-notice[populated] {
     left: calc(50% - 17rem);
     width: 34rem;
-  }  
+  }
 }
 
 .added-notice-contents {
-    background: rgba(0, 0, 0, 0.85);
-    border: 2px solid transparent;
-    border-radius: 8px;
-    color: white;
-    cursor: pointer;
-    font-family: "Linotte";
-    padding: 2rem 3rem;
-    text-align: center;
+  background: rgba(0, 0, 0, 0.85);
+  border: 2px solid transparent;
+  border-radius: 8px;
+  color: var(--color-linen);
+  cursor: pointer;
+  font-family: var(--font-brand);
+  padding: 2rem 3rem;
+  text-align: center;
 }
 
 .added-notice-contents:active,
@@ -474,24 +468,24 @@ max-width: 400px;
 }
 
 #added-notice-song {
-    color: #C8EF00;
+  color: var(--color-old-yellow);
 }
 
-@media (min-width: 28rem) {
+@media (min-width: var(--breakpoint-xs)) {
   .jukeboxes {
     grid-column-gap: 2%;
     grid-template-columns: repeat(2, 49%);
   }
 }
 
-@media (min-width: 35rem) {
+@media (min-width: var(--breakpoint-sm)) {
   .jukeboxes {
     grid-column-gap: 1%;
     grid-template-columns: repeat(4, 24%);
   }
 }
 
-@media (min-width: 49rem) {
+@media (min-width: var(--breakpoint-lg)) {
   .jukeboxes {
     grid-column-gap: 1%;
     grid-template-columns: repeat(5, 19%);
@@ -524,7 +518,7 @@ max-width: 400px;
 }
 
 .jukebox-selected img {
-  border: 4px solid #C8EF00;
+  border: 4px solid var(--color-old-yellow);
 }
 
 .jukebox-selected:before {
@@ -535,7 +529,9 @@ max-width: 400px;
   width: 44px;
   height: 44px;
   border-radius: 100%;
-  background: #C8EF00 url(https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcheck.svg?v=1595801420385) center no-repeat;
+  background: var(--color-old-yellow)
+    url(https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcheck.svg?v=1595801420385)
+    center no-repeat;
 }
 
 .title {
@@ -550,7 +546,7 @@ max-width: 400px;
   margin-top: 20px;
 }
 
-@media (min-width: 28rem) {
+@media (min-width: var(--breakpoint-xs)) {
   .controls {
     display: flex;
     justify-content: flex-end;
@@ -571,7 +567,7 @@ max-width: 400px;
   padding: 0 1rem;
 }
 
-@media (min-width: 42rem) {
+@media (min-width: var(--breakpoint-md)) {
   .controls .button {
     padding: 0 4rem;
   }
@@ -579,7 +575,7 @@ max-width: 400px;
 
 .copyWrapper {
   display: flex;
-  border: 3px solid #050422;
+  border: 3px solid var(--color-midnight);
   border-radius: 8px;
 }
 
@@ -599,11 +595,8 @@ max-width: 400px;
   margin-bottom: 20px;
 }
 
-
 #roomName {
-
-  font-family: "Linotte";
-  color: #050422;
+  font-family: var(--font-brand);
+  color: var(--color-midnight);
   font-weight: bold;
-
 }
