--- a/public/styles/shared.css
+++ b/public/styles/shared.css
@@ -248,132 +248,6 @@ header .page-link.faq {
 }
 /** Header */
 
-/*Section: Hero */
-
-section#hero {
-  position: relative;
-  min-height: 540px;
-}
-
-#hero .bg {
-  position: absolute;
-  bottom: -20px;
-  left: -50%;
-  height: 800px;
-  width: 200%;
-  background: rgb(5, 4, 34);
-  background: -moz-linear-gradient(
-    176deg,
-    rgba(5, 4, 34, 1) 0%,
-    rgba(8, 5, 113, 1) 100%
-  );
-  background: -webkit-linear-gradient(
-    176deg,
-    rgba(5, 4, 34, 1) 0%,
-    rgba(8, 5, 113, 1) 100%
-  );
-  background: linear-gradient(
-    176deg,
-    rgba(5, 4, 34, 1) 0%,
-    rgba(8, 5, 113, 1) 100%
-  );
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="var(--color-midnight)",endColorstr="#080571",GradientType=1);
-  transform: rotate(-3deg);
-  z-index: -1;
-}
-
-#hero .bg-images {
-  width: 100%;
-  max-width: var(--breakpoint-lg);
-  height: 100%;
-  margin: auto;
-  right: 0px;
-  left: 0px;
-  position: absolute;
-}
-
-#hero .bg-images--overflow {
-  height: 100%;
-  position: relative;
-  width: 100%;
-}
-
-#hero .hero-bg-img {
-  position: absolute;
-  bottom: 0px;
-  left: 0px;
-}
-
-#hero .hero-bg-img.star1 {
-  bottom: 80px;
-  left: -100px;
-}
-
-#hero .hero-bg-img.star2 {
-  bottom: 421px;
-  left: -210px;
-}
-
-#hero .hero-bg-img.star3 {
-  bottom: 130px;
-  left: 320px;
-}
-
-#hero .hero-bg-img.star4 {
-  bottom: 480px;
-  left: -20px;
-}
-
-#hero .hero-bg-img.star5 {
-  bottom: 100px;
-  left: 820px;
-}
-
-#hero .hero-bg-img.mic {
-  bottom: 212px;
-  left: 195px;
-}
-
-#hero .section--content {
-  position: relative;
-  z-index: 0;
-}
-
-#hero .layout-flex {
-  align-items: flex-start;
-}
-
-#hero #hero-logo {
-  width: 130%;
-  left: -22px;
-  position: relative;
-}
-
-#hero #hero-tagline {
-  font-size: 1.2em;
-  color: var(--color-linen);
-  font-weight: 400;
-}
-
-#hero h2 {
-  color: var(--color-linen);
-}
-
-#hero #now {
-  padding-left: 140px;
-  text-align: center;
-}
-
-#now h2 {
-  font-size: 1.6rem;
-  font-weight: 500;
-}
-
-#hero a {
-  color: var(--color-linen);
-  font-weight: 400;
-}
-
 form {
   color: var(--color-linen);
   border-radius: 1rem;
@@ -399,7 +273,7 @@ form input[type="text"] {
 
 .section--content {
   margin: auto;
-  max-width: var(--breakpoint-lg);
+  max-width: 49rem;
 }
 
 section:nth-of-type(even) {
@@ -566,69 +440,6 @@ footer {
   margin: auto;
 }
 
-/* Homepage responsive tweaks */
-
-@media (max-width: 60rem) {
-  #hero #now {
-    padding-left: 120px;
-    text-align: center;
-  }
-}
-
-@media (max-width: 50rem) {
-  #hero #now {
-    padding-left: 60px;
-    text-align: center;
-  }
-}
-
-@media (max-width: var(--breakpoint-md)) {
-  #hero #now {
-    padding-left: 0px;
-    text-align: center;
-    padding-top: 20px;
-  }
-  #hero {
-    text-align: center;
-  }
-  #hero #hero-logo {
-    width: 100%;
-    left: -24px;
-    position: relative;
-  }
-  .options--visual img {
-    /*padding:20px;*/
-    width: 50%;
-  }
-}
-
-#members {
-  display: inline-flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.member {
-  text-align: center;
-  margin: 10px 10px;
-}
-
-.member img {
-  width: 150px;
-  border-radius: 50%;
-  border: 3px solid var(--color-midnight);
-}
-
-#members {
-  display: inline-flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-.member {
-  text-align: center;
-  margin: 10px 10px;
-}
-
 .highlighted {
   position: relative;
 }
@@ -750,8 +561,8 @@ footer {
   }
 }
 
-@media (min-width: var(--breakpoint-md)) {
-  .layout-flex p {
+@media (min-width: 42rem) {
+  .layout-flex {
     align-items: center;
     display: flex;
     flex-direction: row;
